fix: user settings layout and z-indexing fixes

--- a/src/app/components/app-menu/app-menu.component.scss
+++ b/src/app/components/app-menu/app-menu.component.scss
@@ -149,3 +149,6 @@
         display: flex;
     }
 }
+:host /deep/ .kStickyClass{
+    z-index: 550 !important;
+}
